fix(elements): linked button component
- fixes bug where disabled button with anchor tag not showing proper disabled styles
- adds example of icons in linked buttons to docs
- prevents icon demo from displaying in docs nav

--- a/projects/elements/src/icon/icon.css
+++ b/projects/elements/src/icon/icon.css
@@ -55,10 +55,6 @@ svg {
   transform: rotate(90deg);
 }
 
-:host([variant='inherit']) {
-  --color: currentColor;
-}
-
 :host([status='success']) {
   --color: var(--nve-sys-support-success-color);
 }
